# cpp_rust_bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  aarch64-unknown-linux-gnu.cmake  readme.md  use_rust.cpp
crates/person/: Cargo.toml
crates/person-cpp/: CMakeLists.txt  Cargo.toml
crates/person-cpp/include/: person.hpp
crates/person-cpp/src/: lib.cpp  lib.rs  person.rs  personbridge.rs
crates/person/src/: person.rs
person-cpp/: CMakeLists.txt  Cargo.toml
person-cpp/include/: person.hpp
person-cpp/src/: lib.rs
